[package]
name = "easy_macro"
version = "0.1.0"
edition = "2021"
description = "Easy macro collection"
rust-version = "1.56"
license = "MIT"
exclude = ["/.github", "/tests", "/.git", ".*"]
categories = ["development-tools"]
keywords = ["macro", "builder"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
